Mon Jun 14 01:15:59 1999  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>

	* gnus.el: Pterodactyl Gnus v0.87 is released.

1999-06-14 02:46:05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (mail-source-fetch-file): Use prescript-delay. 
	(mail-source-run-script): New function.
	(mail-source-fetch-pop): Use it.

1999-06-13 09:52:11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-setup-highlight-words): Moved here. 

Sun Jun 13 07:30:40 1999  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>

	* gnus.el: Pterodactyl Gnus v0.86 is released.

1999-06-13 08:51:25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-treat-translate): New variable.
	(gnus-treat-predicate): Accept a list of regexps.
	(gnus-article-treat-custom): Allow a list of regexps.

1999-06-09  Markus Rost  <markus.rost@mathematik.uni-regensburg.de>

	* gnus/gnus-group.el (gnus-permanently-visible-groups): Fix custom
	type.

1999-06-13 05:15:52  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-babel): Narrow a bit.

	* gnus-agent.el (gnus-agent-get-undownloaded-list): Was too slow. 

1999-06-12  Simon Josefsson  <jas@pdc.kth.se>

        (gnus-agent-get-undownloaded-list): Operate on all articles, not
        only unread ones.
        (gnus-agent-fetch-headers): Fetch headers from unread and marked
        articles, not only unread ones.

1999-06-13 03:01:35  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-limit-to-extra): New command and
	keystroke. 

	* gnus-art.el (gnus-article-x-face-command): Ditto.

	* gnus-uu.el (gnus-uu-default-view-rules): Default to "display".

	* gnus.el (gnus-method-simplify): Accept server names.

1999-06-13 02:36:15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* gnus-art.el (article-babel-prompt): New function.
	(article-babel): New command.

1999-06-13 01:01:52  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-part-wrapper): Go to part.
