@@ -1,3 +1,14 @@
+Tue Jun 15 04:13:01 1999  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>
+
+	* gnus.el: Pterodactyl Gnus v0.88 is released.
+
+1999-06-15 04:13:45  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-sum.el (gnus-summary-save-parts): Destroy handles after
+	usage. 
+
+	* nnmail.el (nnmail-get-new-mail): Save info.
+
 Mon Jun 14 01:15:59 1999  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>
 
 	* gnus.el: Pterodactyl Gnus v0.87 is released.
